Make all nuget packages go in the same folder, so it's easier to use a single folder as your nuget repository for testing

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -25,6 +25,8 @@
     <UwpMetaPackageVersion>5.3.4</UwpMetaPackageVersion>
     <DefaultTargetPlatformVersion>15063</DefaultTargetPlatformVersion>
     <DefaultTargetPlatformMinVersion>14393</DefaultTargetPlatformMinVersion>
+	
+	<PackageOutputPath>$(MSBuildThisFileDirectory)Output\NuGet\$(Configuration)\</PackageOutputPath>
   </PropertyGroup>
 
   <Choose>
