--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ build_script:
 - ps: .\build\build.ps1 -target=SignNuGet
 
 artifacts:
-- path: .\bin\nupkg\*.nupkg
+- path: .\Output\NuGet\Release\*.nupkg
   
 deploy:
   provider: NuGet
