--- a/Microsoft.Toolkit.Uwp.UI.Controls.Design/Microsoft.Toolkit.Uwp.UI.Controls.Design.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls.Design/Microsoft.Toolkit.Uwp.UI.Controls.Design.csproj
@@ -79,13 +79,25 @@
   <ItemGroup>
     <Compile Include="BladeItemMetadata.cs" />
     <Compile Include="BladeViewMetadata.cs" />
+    <Compile Include="CarouselMetadata.cs" />
     <Compile Include="DropShadowPanelMetadata.cs" />
     <Compile Include="AdaptiveGridViewMetadata.cs" />
+    <Compile Include="ExpanderMetadata.cs" />
+    <Compile Include="GridSplitterMetadata.cs" />
+    <Compile Include="HamburgerMenuMetadata.cs" />
+    <Compile Include="HeaderedTextBlockMetadata.cs" />
+    <Compile Include="ImageExMetadata.cs" />
+    <Compile Include="InAppNotificationMetadata.cs" />
+    <Compile Include="LayoutTransitionControlMetadata.cs" />
+    <Compile Include="LoadingMetadata.cs" />
+    <Compile Include="MarkdownTextBlockMetadata.cs" />
+    <Compile Include="MasterDetailsViewMetadata.cs" />
     <Compile Include="MenuItemMetadata.cs" />
     <Compile Include="MenuMetadata.cs" />
     <Compile Include="MetadataRegistration.cs" />
     <Compile Include="Common\MetadataRegistrationBase.cs" />
     <Compile Include="Common\PlatformTypes.cs" />
+    <Compile Include="OrbitViewMetadata.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -100,6 +112,16 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Common\ToolboxCategoryPaths.cs" />
+    <Compile Include="PullToRefreshListViewMetadata.cs" />
+    <Compile Include="RadialGaugeMetadata.cs" />
+    <Compile Include="RadialProgressBarMetadata.cs" />
+    <Compile Include="RangeSelectorMetadata.cs" />
+    <Compile Include="RotatorTileMetadata.cs" />
+    <Compile Include="ScrollHeaderMetadata.cs" />
+    <Compile Include="SlidableListItemMetadata.cs" />
+    <Compile Include="TextToolbarMetadata.cs" />
+    <Compile Include="TileControlMetadata.cs" />
+    <Compile Include="WrapPanelMetadata.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
