Fixed WinMD references to use 10.0 SDK instead of 8.1

--- a/Microsoft.Toolkit.Uwp.UI.Controls.Design/Microsoft.Toolkit.Uwp.UI.Controls.Design.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls.Design/Microsoft.Toolkit.Uwp.UI.Controls.Design.csproj
@@ -38,10 +38,6 @@
     <Reference Include="System.ObjectModel" />
     <Reference Include="System.Runtime.WindowsRuntime" />
     <Reference Include="System.Runtime.InteropServices.WindowsRuntime" />
-    <Reference Include="Windows.winmd">
-      <IsWinMDFile>true</IsWinMDFile>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="Microsoft.Windows.Design.Extensibility">
       <SpecificVersion>False</SpecificVersion>
       <Private>False</Private>
@@ -70,6 +66,11 @@
   <ItemGroup Label="WinRT References">
     <Reference Include="System.Xaml" />
     <Reference Include="System.Runtime.WindowsRuntime.UI.Xaml" />
+    <Reference Include="Windows.UI.Xaml.winmd">
+      <IsWinMDFile>true</IsWinMDFile>
+      <Private>False</Private>
+      <HintPath>$(windir)\System32\WinMetadata\Windows.UI.Xaml.winmd</HintPath>
+    </Reference>
     <Reference Include="Windows.Foundation.FoundationContract">
       <HintPath>$(ProgramFiles)\Windows Kits\10\References\Windows.Foundation.FoundationContract\2.0.0.0\Windows.Foundation.FoundationContract.winmd</HintPath>
       <Aliases>WindowsRuntime</Aliases>
