--- a/Microsoft.Toolkit.Uwp.Samples.BackgroundTasks/Microsoft.Toolkit.Uwp.Samples.BackgroundTasks.csproj
+++ b/Microsoft.Toolkit.Uwp.Samples.BackgroundTasks/Microsoft.Toolkit.Uwp.Samples.BackgroundTasks.csproj
@@ -145,4 +145,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <Target Name="Pack" >
+    <!-- No-op to avoid build error when packing solution from commandline -->
+  </Target>
 </Project>
