--- a/Microsoft.Toolkit.Services/Microsoft.Toolkit.Services.csproj
+++ b/Microsoft.Toolkit.Services/Microsoft.Toolkit.Services.csproj
@@ -11,4 +11,18 @@
     <ProjectReference Include="..\Microsoft.Toolkit\Microsoft.Toolkit.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\MicrosoftGraph\Events\" />
+    <Folder Include="Services\MicrosoftGraph\Message\" />
+    <Folder Include="Services\MicrosoftGraph\User\" />
+    <Folder Include="Services\OneDrive\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Graph" Version="1.6.2" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="1.1.0-preview" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="System.Net.Http" Version="4.3.3" />
+  </ItemGroup>
+
 </Project>
